<?xml version="1.0"?>
<package format="3">
  <name>vins_mono_camera_model</name>
  <version>0.0.0</version>
  <description>The vins_mono_camera_model package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <author email="dvorak@todo.todo">dvorak</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>libboost-program-options-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>libceres-dev</depend>

</package>
