<?xml version="1.0"?>
<package format="3">
  <name>feature_tracker</name>
  <version>0.0.0</version>
  <description>The feature_tracker package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <author email="qintonguav@gmail.com">qintong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>libopencv-dev</depend>
  <depend>camera_model</depend>

</package>
