<?xml version="1.0"?>
<package format="3">
  <name>vins_mono_feature_tracker</name>
  <version>0.0.0</version>
  <description>The feature_tracker package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <author email="qintonguav@gmail.com">qintong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>

  <depend>vins_mono_camera_model</depend>

  <export>

    <!-- The nodelets.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/nodelets.xml" />

  </export>

</package>
