<?xml version="1.0"?>
<package format="3">
  <name>pose_graph</name>
  <version>0.0.1</version>
  <description>pose_graph package</description>

  <atuthor email="tony-ws@todo.todo">tony-ws</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libceres-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>camera_model</depend>

</package>
