<?xml version="1.0"?>
<package format="3">
  <name>vins_mono_pose_graph</name>
  <version>1.0.0</version>
  <description>pose_graph package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <author email="tony-ws@todo.todo">tony-ws</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libceres-dev</depend>
  <depend>libopencv-dev</depend>

  <depend>vins_mono_camera_model</depend>

  <export>

    <!-- The nodelets.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/nodelets.xml" />

  </export>

</package>
