<?xml version="1.0"?>
<package format="3">

  <name>vins_estimator</name>
  <version>1.0.0</version>
  <description>The vins_estimator package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <author email="qintonguav@gmail.com">qintong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libceres-dev</depend>

</package>
