<?xml version="1.0"?>
<package format="3">
  <name>vins_mono_vins_estimator</name>
  <version>1.0.0</version>
  <description>The vins_estimator package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <author email="qintonguav@gmail.com">qintong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>libceres-dev</depend>
  <depend>libopencv-dev</depend>

  <depend>mrs_lib</depend>

  <export>

    <!-- The nodelets.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/nodelets.xml" />

  </export>

</package>
